--- a/BitArmory.ReCaptcha.Tests/BitArmory.ReCaptcha.Tests.csproj
+++ b/BitArmory.ReCaptcha.Tests/BitArmory.ReCaptcha.Tests.csproj
@@ -64,7 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CaptchaTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
