--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,10 @@
 version: '{build}'
 image: Visual Studio 2017
 
+environment:
+  SNKFILE_SECRET: #SecretDatabase.kdbx / OpenSource / BitArmory.ReCaptcha.snk.enc
+    secure: lS8Qt6Z+zxgVjBg6otuCrxnySvx1ASc9VNWc7Vy0lHXIp10B1Lyb2N0O+vGID/51yGmAX6LG53ju23tkOkWiH58QcMwas0UlIODo59jB7k0=
+
 skip_commits:
   message: /(//skip\W*ci)|(read\W*me)/
 
@@ -35,7 +39,7 @@ deploy:
       prerelease: $(IsPreRelease)
       artifact: Zip, NuGet
       auth_token:
-          secure: cyivrWQwrZNAb6UCNXlIQlGfVSnKIC6TatUOIP95CQgMeKGnmBSqBgAFv2TsRZhR
+          secure: orpmAg4FCSTLlblm4O4HfRuUosiP8Mnxeib0vshgZO0p2nFzKju1FiY6jkVkZBMy
       on:
           branch: master
           appveyor_repo_tag_name: /v\d+\.\d+\.\d+/ 
@@ -43,7 +47,7 @@ deploy:
 
     - provider: NuGet
       api_key:
-          secure: 1nPS2ttf+N4+FUhd+GZycrL7YzSWQpZjnGOMCb5+pGJXSdx0IFvVF8xhTGna7B9t
+          secure: G63UldsDJHqas45sJlBFkCQ43nKPacvRz7WUzdC8cbJTKP0jQVqZiDGnjNR9i6ee
       artifact: NuGet
       on:
           branch: master
