--- a/BitArmory.ReCaptcha.Tests/packages.config
+++ b/BitArmory.ReCaptcha.Tests/packages.config
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentAssertions" version="5.3.0" targetFramework="net462" />
-  <package id="Flurl" version="2.8.0" targetFramework="net462" />
-  <package id="Flurl.Http" version="2.4.0" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
   <package id="NUnit" version="3.10.1" targetFramework="net462" />
   <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net462" />
+  <package id="RichardSzalay.MockHttp" version="5.0.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
   <package id="Z.ExtensionMethods.WithTwoNamespace" version="2.0.13" targetFramework="net462" />
 </packages>
