--- a/BitArmory.ReCaptcha.Tests/BitArmory.ReCaptcha.Tests.csproj
+++ b/BitArmory.ReCaptcha.Tests/BitArmory.ReCaptcha.Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net45;netcoreapp3.1;net6.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net45;netcoreapp3.1;net6.0</TargetFrameworks>
     <OutputType>Library</OutputType>
   </PropertyGroup>
   <ItemGroup>
